syntax = "proto3";

package pb;
option go_package = "./pb";

message GetUserInfoReq {
  int64 id = 1;
}

message GetUserInfoResp {
  int64 id = 1;
  string name = 2;
}

service UserCenter  {
  rpc getUser(GetUserInfoReq) returns (GetUserInfoResp);
}